@@ -1,6 +1,7 @@
 void AddSC_zone_borean_tundra_groupquests();
 void AddSC_zone_desolace_groupquests();
 void AddSC_zone_dragonblight_groupquests();
+void AddSC_zone_icecrown_groupquests();
 void AddSC_zone_nagrand_groupquests();
 void AddSC_zone_netherstorm_groupquests();
 void AddSC_zone_shadowmoon_valley_groupquests();
@@ -14,6 +15,7 @@ void Addmod_groupquestsScripts()
     AddSC_zone_borean_tundra_groupquests();
     AddSC_zone_desolace_groupquests();
     AddSC_zone_dragonblight_groupquests();
+    AddSC_zone_icecrown_groupquests();
     AddSC_zone_nagrand_groupquests();
     AddSC_zone_netherstorm_groupquests();
     AddSC_zone_shadowmoon_valley_groupquests();
